Add missing alt for cart symbol

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p class="original-price">$169.99</p>
 
       <button class="button">
-        <img src="images/icon-cart.svg" class="cart" />
+        <img src="images/icon-cart.svg" class="cart" alt="cart symbol" />
         <p class="add-to-cart">Add to Cart</p>
       </button>
     </div>
