Remove the p element from the button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <button class="button">
         <img src="images/icon-cart.svg" class="cart" alt="cart symbol" />
-        <p class="add-to-cart">Add to Cart</p>
+        Add to Cart
       </button>
     </div>
   </main>
